tests/whiley/valid/test_1072.wyal
define nat(int x) is:
    x >= 0


define abs_ensures_0(int x, int y) is:
    nat(y)


assert "postcondition not satisfied":
    forall(int x):
        if:
            x >= 0
        then:
            abs_ensures_0(x, x)


