tests/whiley/invalid/test_94.wyal
define g_requires_0(int y) is:
    y >= 0


define g_ensures_0(int y, int x) is:
    x > 0


assert "postcondition not satisfied":
    forall(int y):
        if:
            g_requires_0(y)
        then:
            g_ensures_0(y, y)


